--- a/package.json
+++ b/package.json
@@ -1,7 +1,14 @@
 {
   "name": "slated-products",
-  "version": "0.0.0",
+  "version": "1.0.0",
+  "lint-staged": {
+    "{src,__{tests,mocks}__}/**/*.{ts,js,json,css,md}": [
+      "prettier --single-quote --trailing-comma es5 --write",
+      "git add"
+    ]
+  },
   "scripts": {
+    "precommit": "lint-staged",
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
@@ -42,6 +49,7 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "prettier": "1.14.3",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
